[project]
name = "udemdatastructures"
version = "0.1.0"
description = "Implementation of data structures in Python"
readme = "README.md"
authors = [
    { name = "Jesus Hincapie", email = "jahlon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-file = "LICENSE"
keywords = ["data structures", "python", "algorithms"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/udemdatastructures/"
publish-url = "https://test.pypi.org/legacy/"
